@@ -4,7 +4,9 @@ import jakarta.persistence.AttributeConverter;
 import jakarta.persistence.Converter;
 
 import java.util.Arrays;
+import java.util.LinkedList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static java.util.Collections.emptyList;
 
@@ -14,11 +16,11 @@ public class LongListConverter implements AttributeConverter<List<Long>, String>
 
     @Override
     public String convertToDatabaseColumn(List<Long> longList) {
-        return longList != null ? String.join(SPLIT_CHAR, longList.stream().map(String::valueOf).toList()) : "";
+        return longList != null ? longList.stream().map(String::valueOf).collect(Collectors.joining(SPLIT_CHAR)) : "";
     }
 
     @Override
     public List<Long> convertToEntityAttribute(String string) {
-        return string != null ? Arrays.stream(string.split(SPLIT_CHAR)).filter(s -> !s.isBlank()).map(Long::parseLong).toList() : emptyList();
+        return string != null ? Arrays.stream(string.split(SPLIT_CHAR)).filter(s -> !s.isBlank()).map(Long::parseLong).collect(Collectors.toList()) : new LinkedList<>();
     }
 }
